--- a/asistenciaqr/src/app/home-student/home-student.page.html
+++ b/asistenciaqr/src/app/home-student/home-student.page.html
@@ -1,13 +1,173 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home-student</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home-student</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content *ngIf="isMobile">
+  <ion-menu contentId="main-content" type="overlay">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <img
+            src="../../assets/icon/LogoDuoc.webp"
+            alt="Duocuc Logo"
+            class="logo"
+          />
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <!-- Modal Credencial -->
+      <ion-modal [isOpen]="isModalCredential">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Credencial Virtual</ion-title>
+              <ion-buttons slot="start">
+                <ion-button (click)="setCredentialOpen(false)">
+                  <ion-icon
+                    name="chevron-back-outline"
+                    class="text-white"
+                  ></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+            <ion-card>
+              <ion-card-header>
+                <div>
+                  <ion-icon
+                    name="person-outline"
+                    style="width: 50px; height: 50px"
+                  ></ion-icon>
+                </div>
+                <ion-card-title> {{usuario.nombre}} </ion-card-title>
+                <ion-card-subtitle> {{usuario.carrera}} </ion-card-subtitle>
+              </ion-card-header>
+            </ion-card>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+      <!-- Fin Modal Credencial -->
+      <!-- Modal Scaner -->
+      <ion-modal [isOpen]="isModalScanner">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Scanner</ion-title>
+              <ion-buttons slot="start">
+                <ion-button (click)="setScannerOpen(false)">
+                  <ion-icon
+                    name="chevron-back-outline"
+                    class="text-white"
+                  ></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+            <div id="reader">
+              <ion-button (click)="requestPermission()">
+                <ion-icon name="aperture-outline" slot="start"></ion-icon>
+                Dar permiso a camará
+              </ion-button>
+            </div>
+            <p *ngIf="scannerResult">
+              Resultado del escaneo: {{ scannerResult }}
+            </p>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+      <!-- Fin Modal Scanner -->
+      <ion-modal [isOpen]="isModalSettings">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Ajustes</ion-title>
+              <ion-buttons slot="start">
+                <ion-button (click)="setSettingsOpen(false)">
+                  <ion-icon
+                    name="chevron-back-outline"
+                    class="text-white"
+                  ></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding"></ion-content>
+        </ng-template>
+      </ion-modal>
+      <ion-menu-toggle>
+        <ion-item class="text-dark" (click)="setCredentialOpen(true)">
+          Credencial Virtual
+          <ion-icon name="id-card-outline" slot="start"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle>
+        <ion-item class="text-dark" (click)="setScannerOpen(true)">
+          escanear
+          <ion-icon name="barcode-outline" slot="start"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle>
+        <ion-item class="text-dark" (click)="setSettingsOpen(true)">
+          Ajustes
+          <ion-icon name="cog-outline" slot="start"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle routerLink="/login">
+        <ion-item class="text-dark">
+          Cerrar Sesión
+          <ion-icon name="lock-closed-sharp" slot="start"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <img
+            src="../../assets/icon/LogoDuoc.webp"
+            alt="Duocuc Logo"
+            class="logo"
+          />
+        </ion-title>
+        <ion-buttons slot="start">
+          <ion-menu-toggle>
+            <ion-button>
+              <ion-icon name="grid-outline" class="text-white"></ion-icon>
+            </ion-button>
+          </ion-menu-toggle>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <h2>Bienvenido, {{ usuario.nombre }}</h2>
+      <ion-card *ngFor="let clase of clases">
+        <ion-card-header>
+          <ion-card-subtitle> {{ clase.profesor }} </ion-card-subtitle>
+          <ion-card-title> {{ clase.nombre }} </ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>ID: {{ clase.id }}</p>
+          <p>Carrera: {{ clase.carreraClase }}</p>
+          <p>Hora: {{ clase.horaInicio }} - {{clase.horaTermino}}</p>
+          <p>Dia(s): {{ clase.dias }}</p>
+          <button class="btn btn-primary mt-2" (click)="setScannerOpen(true)">
+            <i class="bi bi-upc-scan"></i> Escáner QR
+          </button>
+        </ion-card-content>
+      </ion-card>
+    </ion-content>
+  </div>
 </ion-content>
+
+<ion-content
+  *ngIf="!isMobile"
+  class="desktop-message-container text-dark d-flex justify-content-center align-items-center"
+>
+  <p class="message text-dark text-center">
+    <strong>Mensaje:</strong><br />
+    la asistencia por escritorio esta bloqueada, es
+    <strong>solo para profesores</strong>.<br />
+    Favor de escanear asistencia por <strong>celular</strong>.
+  </p>
+</ion-content>
+<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
