--- a/asistenciaqr/src/app/home-profesor/home-profesor.page.html
+++ b/asistenciaqr/src/app/home-profesor/home-profesor.page.html
@@ -1,13 +1,216 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>home-profesor</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content *ngIf="!isMobile" class="desktop-message-container">
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <img
+            src="../../assets/icon/LogoDuoc.webp"
+            alt="Duocuc Logo"
+            class="logo"
+          />
+        </ion-title>
+        <ion-button slot="end" (click)="setOpenCrear(true)">
+          <ion-icon name="add-outline" slot="end"></ion-icon>
+          Crear Clase
+        </ion-button>
+        <ion-button slot="end" routerLink="/login">
+          logout
+          <ion-icon name="log-out-outline"></ion-icon>
+        </ion-button>
+      </ion-toolbar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home-profesor</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <!-- Modal for Crear Clase -->
+      <ion-modal [isOpen]="isCrearModalOpen">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>Crear Clase</ion-title>
+              <ion-buttons slot="end">
+                <ion-button (click)="setOpenCrear(false)">
+                  <ion-icon name="close-outline"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+            <div class="row mt-2">
+              <div class="col-sm-6">
+                <h2>Formulario de clases</h2>
+                <form [formGroup]="claseForm" (ngSubmit)="saveClass()">
+                  <ion-item class="pt-2">
+                    <ion-input
+                      label="Nombre de la clase"
+                      label-placement="floating"
+                      fill="outline"
+                      formControlName="nombre"
+                      type="text"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-select
+                      label="Carrera"
+                      placeholder="Elija carrera"
+                      fill="outline"
+                      formControlName="career"
+                      required
+                    >
+                      <ion-select-option
+                        *ngFor="let carrera of career"
+                        [value]="carrera"
+                      >
+                        {{ carrera }}
+                      </ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-input
+                      label="Hora Inicio"
+                      label-placement="floating"
+                      fill="outline"
+                      formControlName="iniTime"
+                      type="time"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-input
+                      label="Hora Termino"
+                      label-placement="floating"
+                      fill="outline"
+                      formControlName="finishTime"
+                      type="time"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-select
+                      label="Diurno o Vespertino"
+                      placeholder="Seleccione horario"
+                      fill="outline"
+                      formControlName="hour"
+                    >
+                      <ion-select-option
+                        *ngFor="let hora of hour"
+                        [value]="hora"
+                      >
+                        {{ hora }}
+                      </ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-select
+                      label="Dia(s) Clase"
+                      placeholder="Seleccione Día(s)"
+                      fill="outline"
+                      formControlName="week"
+                      [multiple]="true"
+                    >
+                      <ion-select-option *ngFor="let dia of week" [value]="dia">
+                        {{ dia }}
+                      </ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <ion-item class="pt-2">
+                    <ion-select
+                      label="Profesor"
+                      placeholder="Seleccione un Profesor"
+                      fill="outline"
+                      formControlName="profesor"
+                    >
+                      <ion-select-option
+                        *ngFor="let profesor of profesors"
+                        [value]="profesor.uid"
+                      >
+                        {{ profesor.nombre }}
+                      </ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <ion-button
+                    type="submit"
+                    [disabled]="!claseForm.valid"
+                    class="pt-2"
+                    >Guardar Clase</ion-button
+                  >
+                </form>
+              </div>
+              <div class="col-sm-6">
+                <h2>Clases Registradas</h2>
+                <ion-list>
+                  <ion-item *ngFor="let clase of clases">
+                    <ion-label>
+                      <h1>{{ clase.nombre }}</h1>
+                      <h2>Carrera: {{ clase.carreraClase }}</h2>
+                      <p>
+                        Horario: {{ clase.horaInicio }} - {{ clase.horaTermino
+                        }}
+                      </p>
+                      <p>Jornada: {{ clase.diurnoVespertino }}</p>
+                      <p>Días: {{ clase.dias?.join(', ') }}</p>
+                      <p>Profesor: {{ clase.profesor }}</p>
+                    </ion-label>
+                  </ion-item>
+                </ion-list>
+              </div>
+            </div>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <!-- Relleno -->
+      <ion-list>
+        <ion-list-header>
+          <ion-label>Lista de Clases</ion-label>
+        </ion-list-header>
+        <p>Bienvenido, {{usuario.nombre}}</p>
+        <ion-item *ngFor="let clase of clases">
+          <ion-label>
+            <h2>{{ clase.nombre }}</h2>
+            <h3>{{ clase.carreraClase }}</h3>
+            <p>Profesor: {{clase.profesor}}</p>
+            <p>Horario: {{ clase.horaInicio }} - {{ clase.horaTermino }}</p>
+            <p>Jornada: {{ clase.diurnoVespertino }}</p>
+            <p>Día(s): {{ clase.dias }}</p>
+            <ion-button (click)="setQrData(clase)">Generar QR</ion-button>
+          </ion-label>
+          <ion-modal [isOpen]="isModalOpen">
+            <ng-template class="d-flex-center">
+              <ion-header>
+                <ion-toolbar>
+                  <ion-title>QR Code</ion-title>
+                  <ion-buttons slot="end">
+                    <ion-button (click)="setOpen(false)">
+                      <ion-icon name="close-outline"></ion-icon>
+                    </ion-button>
+                  </ion-buttons>
+                </ion-toolbar>
+              </ion-header>
+              <ion-content class="ion-padding d-flex-center">
+                <div class="qr-wrapper" *ngIf="createdCode">
+                  <qrcode
+                    [qrdata]="createdCode"
+                    [width]="250"
+                    [errorCorrectionLevel]="'M'"
+                  ></qrcode>
+                  {{qrData}}
+                </div>
+                <p *ngIf="!createdCode">No hay clase programada para hoy.</p>
+              </ion-content>
+            </ng-template>
+          </ion-modal>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </div>
+</ion-content>
+
+<ion-content
+  *ngIf="isMobile"
+  class="message-container text-dark d-flex justify-content-center align-items-center"
+  style="height: 100%"
+>
+  <p class="message text-dark text-center">
+    <strong>Mensaje:</strong><br />
+    la asistencia por celular esta bloqueada profesor, es
+    <strong>solo para alumnos</strong>.<br />
+    Favor de pasar lista por <strong>computador</strong>.
+  </p>
 </ion-content>
