--- a/asistenciaqr/src/app/home-profesor/home-profesor.page.html
+++ b/asistenciaqr/src/app/home-profesor/home-profesor.page.html
@@ -117,7 +117,7 @@
                     >
                       <ion-select-option
                         *ngFor="let profesor of profesors"
-                        [value]="profesor.uid"
+                        [value]="profesor.name"
                       >
                         {{ profesor.name }}
                       </ion-select-option>
