--- a/asistenciaqr/src/app/asistencia/asistencia.page.html
+++ b/asistenciaqr/src/app/asistencia/asistencia.page.html
@@ -1,13 +1,40 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>asistencia</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content *ngIf="isMobile">
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <img
+            src="../../assets/icon/LogoDuoc.webp"
+            alt="Duocuc Logo"
+            class="logo"
+          />
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+  </div>
+  <ion-content class="ion-padding">
+    <h2>Usuario: {{ usuario.name }}</h2>
+    <ion-card *ngFor="let asis of asistens">
+      <ion-card-header>
+        <ion-card-subtitle> {{ asis.idAsistens }} </ion-card-subtitle>
+        <ion-card-title> {{ asis.userName }} </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>ID Clase: {{ asis.idClass }}</p>
+        <p>Hora de asistencia: {{ asis.hourAsistens }}</p>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+</ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">asistencia</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content
+  *ngIf="!isMobile"
+  class="desktop-message-container text-dark d-flex justify-content-center align-items-center"
+>
+  <p class="message text-dark text-center">
+    <strong>Mensaje:</strong><br />
+    la asistencia por escritorio esta bloqueada, es
+    <strong>solo para profesores</strong>.<br />
+    Favor de escanear asistencia por <strong>celular</strong>.
+  </p>
 </ion-content>
