--- a/asistenciaqr/src/app/create-account/create-account.page.scss
+++ b/asistenciaqr/src/app/create-account/create-account.page.scss
@@ -91,3 +91,14 @@ ion-input::part(native),
 ion-select::part(native) {
   color: black; /* Cambia el color del texto de los inputs */
 }
+
+ion-popover {
+  --background: #ffffff; /* Fondo blanco del popover */
+}
+
+ion-popover ion-content {
+  --background: #ffffff; /* Fondo blanco del contenido */
+  color: #000; /* Texto negro, si es necesario */
+  font-size: 14px; /* Ajusta el tamaño del texto si es necesario */
+  padding: 16px; /* Espaciado interno para mejor diseño */
+}
