--- a/asistenciaqr/src/app/create-account/create-account.page.html
+++ b/asistenciaqr/src/app/create-account/create-account.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="crear-container">
-    <ion-button router="/login" class="recuperar-button back-button">
+    <ion-button routerLink="/login" class="recuperar-button back-button">
       <ion-icon name="chevron-back-outline" slot="start"></ion-icon>
       Atrás
     </ion-button>
@@ -82,8 +82,23 @@
             type="password"
           >
             <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+            <ion-button
+              id="click-password"
+              shape="round"
+              slot="end"
+              size="small"
+            >
+              <ion-icon name="help-outline"></ion-icon>
+            </ion-button>
           </ion-input>
         </ion-item>
+        <ion-popover trigger="click-password" triggerAction="click">
+          <ng-template>
+            <ion-content class="ion-padding">
+              Contraseña min 6 caracteres
+            </ion-content>
+          </ng-template>
+        </ion-popover>
         <ion-button type="submit" [disabled]="!personForm.valid">
           Crear Cuenta
         </ion-button>
